src/components/landing/Flower/flower.module.scss
@keyframes flowerSwing {
  from {
    transform: rotate(-8deg);
  }
  to {
    transform: rotate(8deg);
  }
}

.container {
  position: relative;
  aspect-ratio: 1059.91 / 685.79;
  width: 100%;
  height: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;

  .stem {
    position: absolute;
    z-index: 3;
    width: 10%;
    height: auto;
    align-self: flex-end;
    transform: translateX(38%) translateY(95%);
  }

  .flower {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;

    img {
      position: absolute;
    }

    .wrapper {
      position: absolute;
      height: 100%;
      width: 100%;
      animation: flowerSwing 5s infinite ease-in-out alternate;
      display: flex;
      justify-content: center;
      transform-origin: 50% 100%;

      &:nth-of-type(1) {
        z-index: 4;
      }

      &:nth-of-type(2) {
        z-index: 2;
        animation-delay: 0.3s;
      }

      &:nth-of-type(3) {
        z-index: 1;
        animation-delay: 0.6s;
      }

      &:nth-of-type(4) {
        animation-delay: 0.2s;
      }
    }

    .yellow {
      height: 38%;
      width: auto;
      top: 0;
    }

    .orange {
      height: 83.5%;
      bottom: 7%;
    }

    .green {
      height: 55%;
      width: auto;
      bottom: 30%;
    }

    .purple {
      height: 55%;

      bottom: 0;
    }

    .pink {
      height: 100%;
    }
  }
}

